# pobl

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PROJECT_PLAN.md  QOVERY_CRON_SETUP.md  docker-compose.yml
config/: bot_config.yaml
docs/: find-best-algo.md
migrations/: 001_bot_trades.sql  002_matrix_snapshots.sql  002_trade_executions.sql  003_market_logs.sql  004_binance_klines.sql  004_trade_attempts.sql  005_polymarket_prices.sql  006_polymarket_trades.sql
output/: backtest_results.csv  first_passage_report.txt  matrix.csv  matrix.json  price_crossing_matrix.csv  price_crossing_report.txt  price_reach_matrix.csv  price_reach_matrix.json  price_reach_report.txt  report.txt  strategy_analysis_24h.csv
results/: algo_backtest_1sec.csv  algo_backtest_1sec_calibration.csv  algo_backtest_3month.csv  algo_backtest_3month_calibration.csv  algo_backtest_fixed.csv  algo_backtest_fixed_calibration.csv  algo_backtest_test.csv  algo_backtest_test_calibration.csv
scripts/: backfill_binance_1s.py  backfill_binance_fast.py  backfill_chainlink.py  backfill_chainlink_events.py  backfill_from_binance.py  backfill_polymarket_prices.py  backfill_polymarket_trades.py  backfill_ultrafast.py  chainlink_fetcher.py  chainlink_hourly_update.sh  requirements.txt  sync_polymarket_prices.py  update_klines.sh
src/: binance_klines.rs  chainlink.rs  db.rs  edge.rs  main.rs  models.rs  output.rs  processor.rs  stats.rs
src/bot/: binance.rs  config.rs  db.rs  executor.rs  main.rs  mod.rs  polymarket.rs  redis_state.rs  strategy.rs  websocket.rs
tests/: critical_path_tests.rs
