[package]
name = "btc-probability-matrix"
version = "0.1.0"
edition = "2021"
description = "Analyze Binance BTC prices to calculate UP/DOWN probabilities for Polymarket betting"

[[bin]]
name = "btc-probability-matrix"
path = "src/main.rs"

[[bin]]
name = "btc-bot"
path = "src/bot/main.rs"

[dependencies]
# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full", "signal"] }
deadpool-postgres = "0.14"
native-tls = "0.2"
postgres-native-tls = "0.5"

# Data handling
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["db-tokio-postgres", "serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI and output
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
tabled = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Statistics (for Wilson CI calculations)
statrs = "0.17"

# HTTP client (for Polymarket & Binance APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket (for real-time price feeds)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto signing (for Polymarket orders)
secp256k1 = { version = "0.29", features = ["recovery"] }
sha3 = "0.10"
hex = "0.4"

# Environment variables
dotenvy = "0.15"
