[package]
name = "btc-probability-matrix"
version = "0.1.0"
edition = "2021"
description = "Analyze Binance BTC prices to calculate UP/DOWN probabilities for Polymarket betting"

[[bin]]
name = "btc-probability-matrix"
path = "src/main.rs"

[[bin]]
name = "btc-bot"
path = "src/bot/main.rs"

[[bin]]
name = "btc-logger"
path = "src/bin/logger.rs"

[[bin]]
name = "btc-logger-ws"
path = "src/bin/logger_ws.rs"

[[bin]]
name = "btc-backtester"
path = "src/bin/backtester.rs"

[dependencies]
# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1", features = ["full", "signal"] }
deadpool-postgres = "0.14"
native-tls = "0.2"
postgres-native-tls = "0.5"

# Redis for shared state across pods
redis = { version = "0.25", features = ["tokio-comp", "tokio-native-tls-comp"] }

# Data handling
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["db-tokio-postgres", "serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI and output
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
tabled = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Statistics (for Wilson CI calculations)
statrs = "0.17"

# HTTP client (for Polymarket & Binance APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket (for real-time price feeds)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto signing (for Polymarket orders - EIP-712)
secp256k1 = { version = "0.29", features = ["recovery", "rand-std"] }
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
rust_decimal_macros = "1.33"
